--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,6 +52,7 @@ jobs:
   pypi-publish:
     name: upload release to PyPI
     needs: validate
+    if: github.event.workflow_run.head_branch != 'main'
     runs-on: ubuntu-latest
     environment: release
     permissions:
