--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,8 @@ services:
       - postgres
     environment:
       FML_LOG_LEVEL: debug
-      FML_DATABASE_URI: postgres://postgres:postgres@postgres/postgres
+      FML_DATABASE_URI: ${FML_DATABASE_URI}
+      #FML_DATABASE_URI: postgres://postgres:postgres@postgres/postgres
       FML_S3_ENDPOINT_URI: http://minio:9000
       AWS_ACCESS_KEY_ID: "user"
       AWS_SECRET_ACCESS_KEY: "password"
@@ -39,7 +40,8 @@ services:
       - service
     environment:
       FML_SERVICE_URI: http://service:5000
-      FML_DATABASE_URI: postgres://postgres:postgres@postgres/postgres
+      FML_DATABASE_URI: ${FML_DATABASE_URI}
+      #FML_DATABASE_URI: postgres://postgres:postgres@postgres/postgres
       FML_S3_ENDPOINT_URI: http://minio:9000
       AWS_ACCESS_KEY_ID: "user"
       AWS_SECRET_ACCESS_KEY: "password"
