--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -122,7 +122,7 @@ jobs:
         run: make service-test
         env:
           DOCKER_BUILDKIT: 1
-          FML_DATABASE_URI: sqlite://fasttrack-test.db
+          FML_DATABASE_URI: sqlite:///tmp/fasttrack-test.db
 
       - name: Run Integration Tests (Postgres)
         run: make service-test
