--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ services:
   service:
     build:
       context: .
+    volumes:
+      - tmp:/tmp
     depends_on:
       - minio
       - postgres
@@ -33,6 +35,7 @@ services:
     volumes:
       - .:/go/src
       - go-cache:/go/pkg
+      - tmp:/tmp
     working_dir: /go/src
     depends_on:
       - minio
@@ -48,3 +51,4 @@ services:
 
 volumes:
   go-cache:
+  tmp:
