--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,14 @@ services:
   service:
     build:
       context: .
+    volumes:
+      - tmp:/tmp
     depends_on:
       - minio
       - postgres
     environment:
       FML_LOG_LEVEL: debug
-      FML_DATABASE_URI: postgres://postgres:postgres@postgres/postgres
+      FML_DATABASE_URI: ${FML_DATABASE_URI}
       FML_S3_ENDPOINT_URI: http://minio:9000
       AWS_ACCESS_KEY_ID: "user"
       AWS_SECRET_ACCESS_KEY: "password"
@@ -32,6 +34,7 @@ services:
     volumes:
       - .:/go/src
       - go-cache:/go/pkg
+      - tmp:/tmp
     working_dir: /go/src
     depends_on:
       - minio
@@ -39,10 +42,11 @@ services:
       - service
     environment:
       FML_SERVICE_URI: http://service:5000
-      FML_DATABASE_URI: postgres://postgres:postgres@postgres/postgres
+      FML_DATABASE_URI: ${FML_DATABASE_URI}
       FML_S3_ENDPOINT_URI: http://minio:9000
       AWS_ACCESS_KEY_ID: "user"
       AWS_SECRET_ACCESS_KEY: "password"
 
 volumes:
   go-cache:
+  tmp:
