--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 volumes:
   home:
-  workspaces:
+  app-data:
   minio-data:
   postgres-data:
 
@@ -29,9 +29,14 @@ services:
 
     volumes:
       - home:/home/vscode
-      - workspaces:/workspaces
+      # mount the parent to include this and all sibling projects
+      # - ../..:/workspaces
+
+      # or mount specific project paths
+      - app-data:/workspaces
+      # - ../../fasttrackml-ui-mlflow:/workspaces/fasttrackml-ui-mlflow
       - ..:/workspaces/fasttrackml:cached
-      
+
     # Overrides default command so things don't shut down after the process ends.
     command: sleep infinity
 
@@ -60,6 +65,7 @@ services:
       - "5432:5432"
       - "9000:9000"
       - "9001:9001"
+      - "5000:5000"
 
     # Add "forwardPorts": ["5432"] to **devcontainer.json** to forward PostgreSQL locally.
     # (Adding the "ports" property to this file will not forward from a Codespace.). Ports
