--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,7 +58,8 @@ jobs:
 
       - uses: dominikh/staticcheck-action@v1.3.0
         with:
-          version: "2022.1.3"
+          version: "2023.1.5"
+          install-go: false
           build-tags: ${{ steps.tags.outputs.tags }}
 
   python-lint:
