--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ dist/
 fml
 fasttrackml
 *.exe
+__debug_bin*
 
 # Local database
 fasttrackml.db*
@@ -25,7 +26,7 @@ mock_*
 .DS_Store
 
 # Optional workspace
-go.work
+go.work*
 *.code-workspace
 
 # Python wheels
