--- a/.mockery.yaml
+++ b/.mockery.yaml
@@ -3,6 +3,9 @@ filename: "mock_{{ .InterfaceNameSnake }}.go"
 with-expecter: false
 inpackage: true
 packages:
+  github.com/G-Research/fasttrackml/pkg/api/admin/dao/repositories:
+      interfaces:
+        NamespaceRepositoryProvider:
   github.com/G-Research/fasttrackml/pkg/api/mlflow/dao/repositories:
     interfaces:
       BaseRepositoryProvider:
